# ghc-stack-profiler

./: .gitignore  CHANGELOG.md  README.md  cabal.only-core.project  cabal.project  fourmolu.yaml  ghc-annotation-eventlog.cabal
.github/: dependabot.yml
.github/actions/setup-actionlint/: action.yml
.github/actions/setup-cabal-gild/: action.yml
.github/actions/setup-fourmolu/: action.yml
.github/actions/setup-shellcheck/: action.yml
.github/workflows/: ci.yml  haskell.yml
app/: Main.hs
core/: CHANGELOG.md  ghc-stack-profiler-core.cabal
core/src/GHC/Stack/Profiler/: ThreadSample.hs
docs/: Release.md  upload_releases.sh
examples/eventlog-socket-example/: eventlog-socket-example.cabal
examples/eventlog-socket-example/app/: Main.hs
examples/eventlog-socket-jumpy-jump/app/: Main.hs
examples/eventlog-socket-oddball/app/: Main.hs
examples/eventlog-socket/fibber/: eventlog-socket-fibber.cabal
examples/eventlog-socket/fibber/app/: Main.hs
examples/eventlog-socket/jumpy-jump/: jumpy-jump.cabal
examples/eventlog-socket/jumpy-jump/app/: Main.hs
examples/eventlog-socket/oddball/: oddball.cabal
examples/eventlog-socket/oddball/app/: Main.hs
examples/simple/: simple.cabal
examples/simple-scope/: simple-scope.cabal
examples/simple-scope/app/: Main.hs
examples/simple/app/: Main.hs
ghc-stack-profiler/: CHANGELOG.md  ghc-stack-profiler.cabal
ghc-stack-profiler-core/: CHANGELOG.md  ghc-stack-profiler-core.cabal
ghc-stack-profiler-core/src/GHC/Stack/Profiler/: Eventlog.hs  SourceLocation.hs  SymbolTable.hs  ThreadSample.hs  Util.hs
ghc-stack-profiler-core/src/GHC/Stack/Profiler/Core/: Eventlog.hs  SourceLocation.hs  SymbolTable.hs  ThreadSample.hs  Util.hs
ghc-stack-profiler-core/test/: Main.hs
ghc-stack-profiler-speedscope/: CHANGELOG.md  ghc-stack-profiler-speedscope.cabal
ghc-stack-profiler-speedscope/app/: Main.hs
ghc-stack-profiler-speedscope/src/GHC/Stack/Profiler/: Speedscope.hs
ghc-stack-profiler-speedscope/src/GHC/Stack/Profiler/Speedscope/: IpeDb.hs  Options.hs  Types.hs
ghc-stack-profiler-tests/: ghc-stack-profiler-tests.cabal  ghc-stack-profiler.cabal
ghc-stack-profiler-tests/tests/: Main.hs
ghc-stack-profiler/cbits/: Stack.cmm  Stack_c.c  custom-command-handler.c  custom-command-handler.h
ghc-stack-profiler/src/Debug/Trace/Binary/: Compat.hs
ghc-stack-profiler/src/GHC/Internal/ClosureTypes/: Compat.hs
ghc-stack-profiler/src/GHC/Internal/Heap/Closures/: Compat.hs
ghc-stack-profiler/src/GHC/Internal/InfoProv/Types/: Compat.hsc
ghc-stack-profiler/src/GHC/Internal/Stack/Constants/: Compat.hs
ghc-stack-profiler/src/GHC/Internal/Stack/Decode/: Compat.hs
ghc-stack-profiler/src/GHC/Stack/: Profiler.hs
ghc-stack-profiler/src/GHC/Stack/Annotation/Experimental/: Compat.hs
ghc-stack-profiler/src/GHC/Stack/Profiler/: Commands.hs  Decode.hs  FFI.hs  Manager.hs  Sampler.hs  SymbolTable.hs  Util.hs
ghc-stack-profiler/src/GHC/Stack/Profiler/Eventlog/: Socket.hs
ghc-stack-profiler/src/GHC/Stack/Profiler/Stack/: Compat.hs  Decode.hs
ghc-stack-profiler/tests/: Main.hs
profiler/: CHANGELOG.md  ghc-stack-profiler.cabal
profiler/src/Debug/Trace/Binary/: Compat.hs
profiler/src/GHC/Stack/Profiler/: Sampler.hs  ThreadSample.hs
sampler/: CHANGELOG.md  ghc-sampler-eventlog.cabal
sampler/src/: Gap.hs  Sampler.hs  ThreadSample.hs  Util.hs
scripts/: dev-dependencies.txt  lint-cabal.sh  lint-haddock.sh  pre-commit.sh  test.sh
speedscope/: CHANGELOG.md  ghc-stack-profiler-speedscope.cabal  sampler-speedscope.cabal
speedscope/app/: Main.hs
speedscope/src/: Speedscope.hs
speedscope/src/GHC/Stack/Profiler/: Speedscope.hs
src/: MyLib.hs  Sampler.hs  Speedscope.hs  ThreadSample.hs  Util.hs
