cabal-version:      3.8
name:               ghc-annotation-eventlog
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             fendor
maintainer:         fendor@posteo.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        ghc-internal,
        ghc-experimental,
        ghc-trace-events,
        bytestring,
    hs-source-dirs:   src
    default-language: Haskell2010
