cabal-version:      3.8
name:               ghc-annotation-eventlog
version:            0.1.0.0
license:            NONE
author:             fendor
maintainer:         fendor@posteo.de
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:
        warnings
    exposed-modules:
        Sampler
        ThreadSample
        Util
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        ghc-internal,
        ghc-experimental,
        ghc-trace-events,
        bytestring,
        binary,
    hs-source-dirs:
        src
    default-language: GHC2021

executable ghc-sample-profiler
    import:
        warnings
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base,
        ghc-events,
        ghc-annotation-eventlog,
        bytestring,
        containers,
    default-language: GHC2021

