cabal-version:      3.8
name:               ghc-annotation-eventlog
version:            0.1.0.0
license:            NONE
author:             fendor
maintainer:         fendor@posteo.de
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:
        warnings
    exposed-modules:
        Sampler
        Speedscope
        ThreadSample
        Util
    -- other-modules:
    -- other-extensions:
    build-depends:
        aeson,
        base,
        ghc-internal,
        ghc-experimental,
        ghc-trace-events,
        bytestring,
        binary,
        hs-speedscope,
        extra,
        ghc-events,
        containers,
        machines,
        text,
        optparse-applicative,
    hs-source-dirs:
        src
    default-language: GHC2021

executable ghc-sample-profiler
    import:
        warnings
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base,
        ghc-events,
        ghc-annotation-eventlog,
        bytestring,
        hs-speedscope,
        containers,
    default-language: GHC2021

