cabal-version: 3.8
name: ghc-stack-profiler-core
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: ghc ==9.14 || ==9.12 || ==9.10

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    ViewPatterns

library
  import:
    warnings, exts

  exposed-modules:
    GHC.Stack.Profiler.Core.Eventlog
    GHC.Stack.Profiler.Core.SourceLocation
    GHC.Stack.Profiler.Core.SymbolTable
    GHC.Stack.Profiler.Core.ThreadSample
    GHC.Stack.Profiler.Core.Util

  build-depends:
    base,
    binary,
    bytestring,
    containers,
    text,
    transformers,

  hs-source-dirs:
    src

  default-language: GHC2021
