cabal-version: 3.8
name: ghc-stack-profiler-core
version: 0.2.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
synopsis: Thread sample types and serialisation logic for `ghc-stack-profiler`.
description:
  Thread sample types and serialisation logic for `ghc-stack-profiler`.
  Defines the interface and serialisation logic to turn an RTS Callstack into a binary message suitable for the eventlog.

extra-doc-files: CHANGELOG.md
category: Profiling, Benchmarking, Development
tested-with:
  ghc ==10.1 || ==9.14.1 || ==9.12.2 || ==9.10.3

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    NoImportQualifiedPost
    ViewPatterns

library
  import:
    warnings, exts

  exposed-modules:
    GHC.Stack.Profiler.Core.Eventlog
    GHC.Stack.Profiler.Core.SourceLocation
    GHC.Stack.Profiler.Core.SymbolTable
    GHC.Stack.Profiler.Core.ThreadSample
    GHC.Stack.Profiler.Core.Util

  build-depends:
    base >=4.17 && <4.23,
    binary >=0.8.9.3 && <0.11,
    bytestring >=0.11 && <0.13,
    containers >=0.6.8 && <0.9,
    text >=2 && <2.2,
    transformers ^>=0.6.1,

  hs-source-dirs:
    src

  default-language: GHC2021

test-suite ghc-stack-profiler-core-tests
  import: warnings, exts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    ghc-stack-profiler-core,
    tasty >=1.5.4 && <1.6,
    tasty-hunit >=0.9 && <0.13,
    tasty-quickcheck >=0.10 && <0.12,

  default-language: GHC2021

source-repository head
  type: git
  location: https://github.com/well-typed/ghc-stack-profiler.git
  subdir: ghc-stack-profiler-core
