cabal-version: 3.8
name: ghc-stack-profiler-speedscope
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
synopsis: Convert eventlog messages from `ghc-stack-profiler` into a speedscope json.
description:
  Convert eventlog messages from `ghc-stack-profiler` into a speedscope json.
  Produce a flame graph for the RTS callstack samples obtained from a program instrumented with
  'ghc-stack-profiler'.

extra-doc-files: CHANGELOG.md
category: Profiling, Benchmarking, Development
tested-with: ghc ==9.14 || ==9.12 || ==9.10

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    ViewPatterns
    NoImportQualifiedPost

common runopts
  ghc-options:
    -threaded
    -rtsopts

library
  import:
    warnings, exts

  exposed-modules:
    GHC.Stack.Profiler.Speedscope
    GHC.Stack.Profiler.Speedscope.IpeDb
    GHC.Stack.Profiler.Speedscope.Options
    GHC.Stack.Profiler.Speedscope.Types

  build-depends:
    aeson >=2.2 && <2.3,
    base >=4.20 && <4.23,
    bytestring >=0.11 && <0.13,
    containers >=0.6.8 && <0.9,
    extra ^>=1.8.1,
    ghc-events ^>=0.20,
    ghc-stack-profiler-core ^>=0.1,
    hs-speedscope ^>=0.3,
    ipedb ^>=0.1.0.0,
    machines ^>=0.7.4,
    optparse-applicative ^>=0.19,
    text >=2 && <2.2,

  hs-source-dirs:
    src

  default-language: GHC2021

executable ghc-stack-profiler-speedscope
  import:
    warnings, exts, runopts

  hs-source-dirs:
    app

  main-is:
    Main.hs

  build-depends:
    base,
    ghc-stack-profiler-speedscope,

  default-language: GHC2021

source-repository head
  type: git
  location: https://github.com/well-typed/ghc-stack-profiler.git
  subdir: ghc-stack-profiler-speedscope
