cabal-version: 3.8
name: ghc-stack-profiler-speedscope
version: 0.4.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
synopsis: Convert eventlog messages from `ghc-stack-profiler` into a speedscope json.
description:
  Convert eventlog messages from `ghc-stack-profiler` into a speedscope json.
  Produce a flame graph for the RTS callstack samples obtained from a program instrumented with
  'ghc-stack-profiler'.

extra-doc-files: CHANGELOG.md
category: Profiling, Benchmarking, Development
tested-with:
  ghc ==10.1 || ==9.14.1 || ==9.12.2 || ==9.10.3

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    LambdaCase
    NamedFieldPuns
    NoImportQualifiedPost
    OverloadedRecordDot
    ViewPatterns

common runopts
  ghc-options:
    -threaded
    -rtsopts

library
  import:
    warnings, exts

  exposed-modules:
    GHC.Stack.Profiler.Speedscope

  other-modules:
    GHC.Stack.Profiler.Speedscope.Options
    GHC.Stack.Profiler.Speedscope.Types

  build-depends:
    aeson >=2.2 && <2.3,
    base >=4.20 && <4.23,
    bytestring >=0.11 && <0.13,
    containers ^>=0.7 || ^>=0.8,
    data-default >=0.2 && <0.9,
    extra ^>=1.8.1,
    filepath ^>=1.4 || ^>=1.5,
    ghc-events ^>=0.20,
    ghc-stack-profiler-core >=0.3 && <0.5,
    hs-speedscope ^>=0.3,
    ipedb ^>=0.2.0.0,
    machines ^>=0.7.4,
    optparse-applicative ^>=0.19,
    text >=2 && <2.2,

  hs-source-dirs:
    src

  default-language: GHC2021

executable ghc-stack-profiler-speedscope
  import:
    warnings, exts, runopts

  hs-source-dirs:
    app

  main-is:
    Main.hs

  build-depends:
    ghc-stack-profiler-speedscope

  default-language: GHC2021

source-repository head
  type: git
  location: https://github.com/well-typed/ghc-stack-profiler.git
  subdir: ghc-stack-profiler-speedscope
