cabal-version: 3.8
name: ghc-stack-profiler
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: GHC ==9.14 || ==9.12 || ==9.10

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DuplicateRecordFields
    NamedFieldPuns
    ViewPatterns
    LambdaCase
    DerivingStrategies
    DeriveGeneric
    PatternSynonyms

flag use-ghc-trace-events
  description: Use the package 'ghc-trace-events'
  manual: True
  default: True

library
  import:
    warnings, exts

  exposed-modules:
    Debug.Trace.Binary.Compat
    GHC.Internal.ClosureTypes.Compat
    GHC.Internal.Heap.Closures.Compat
    GHC.Internal.InfoProv.Types.Compat
    GHC.Internal.Stack.Decode.Compat
    GHC.Internal.Stack.Constants.Compat
    GHC.Stack.Annotation.Experimental.Compat
    GHC.Stack.Profiler.Decode
    GHC.Stack.Profiler.Sampler
    GHC.Stack.Profiler.Stack.Compat
    GHC.Stack.Profiler.Stack.Decode
    GHC.Stack.Profiler.Util

  build-depends:
    base,
    binary,
    bytestring,
    ghc-internal,
    ghc-stack-profiler-core,
    text,
    ghc-heap,

  if impl(ghc >= 9.14)
    build-depends: ghc-experimental,

  if flag(use-ghc-trace-events)
    cpp-options:
        -DUSE_GHC_TRACE_EVENTS
    build-depends:
        ghc-trace-events,
  else
    build-depends:
        ghc-prim,


  if impl(ghc < 9.14)
    cmm-sources:
      cbits/Stack.cmm
    c-sources:
      cbits/Stack_c.c

  hs-source-dirs:
    src

  default-language: GHC2021
