cabal-version: 3.8
name: ghc-stack-profiler
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DuplicateRecordFields
    NamedFieldPuns
    ViewPatterns
    LambdaCase
    DerivingStrategies
    DeriveGeneric

flag use-ghc-trace-events
  description: Use the package 'ghc-trace-events'
  manual: True
  default: True

library
  import:
    warnings, exts

  exposed-modules:
    Debug.Trace.Binary.Compat

    GHC.Stack.Profiler.Sampler
    GHC.Stack.Profiler.ThreadSample
    GHC.Stack.Profiler.Util

  build-depends:
    base,
    binary,
    bytestring,
    ghc-experimental,
    ghc-internal,

    text,

  if flag(use-ghc-trace-events)
    cpp-options:
        -DUSE_GHC_TRACE_EVENTS
    build-depends:
        ghc-trace-events,
  else
    build-depends:
        ghc-prim,

  hs-source-dirs:
    src

  default-language: GHC2021
