cabal-version: 3.8
name: ghc-stack-profiler-speedscope
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Wen Kokke, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common exts
  default-extensions:
    DuplicateRecordFields
    NamedFieldPuns
    ViewPatterns
    LambdaCase
    DerivingStrategies
    DeriveGeneric

library
  import:
    warnings, exts

  exposed-modules:
    GHC.Stack.Profiler.Speedscope

  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    extra,
    ghc-events,
    ghc-stack-profiler,
    hs-speedscope,
    machines,
    optparse-applicative,
    text,

  hs-source-dirs:
    src

  default-language: GHC2021

executable ghc-stack-profiler-speedscope
  import:
    warnings, exts

  hs-source-dirs:
    app

  main-is:
    Main.hs

  build-depends:
    base,
    ghc-stack-profiler-speedscope,

  default-language: GHC2021
