cabal-version:   3.8
name:            simple-scope
version:         0.1.0.0
license:         NONE
author:          Hannes Siebenhandl
maintainer:      hannes@well-typed.com
build-type:      Simple

common warnings
    ghc-options: -Wall

common run-options
    ghc-options: -threaded -rtsopts

common comp-options
    ghc-options: -finfo-table-map -fdistinct-constructor-tables
    
executable simple-scope
    import:           warnings, run-options, comp-options
    main-is:          Main.hs
    build-depends:
        base,
        ghc-stack-profiler,
        ghc-stack-annotations,
    hs-source-dirs:   app
    default-language: Haskell2010
