cabal-version:   3.8
name:            simple
version:         0.1.0.0
license:         NONE
author:          Hannes Siebenhandl
maintainer:      hannes@well-typed.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

common runoptions
    ghc-options: -threaded -rtsopts -fno-omit-yields

executable simple
    import:           warnings, runoptions
    main-is:          Main.hs
    build-depends:
        base,
        ghc-annotation-eventlog,
        ghc-experimental,
    hs-source-dirs:   app
    default-language: Haskell2010
