cabal-version: 2.4
name:          oddball
version:       0.1.0.0
synopsis:      Example program that sums random lists of numbers
description:   Example program that sums random lists of numbers.
license:       BSD-3-Clause
license-file:  LICENSE
author:        Eventlog Socket Contributors
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
category:      Test
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

executable oddball
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: TypeApplications
  ghc-options:        -threaded -rtsopts
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket  >=0.1  && <0.2
    , random           >=1.2  && <1.4
    , ghc-stack-profiler

  if impl(ghc <9.4)
    ghc-options: -eventlog
